--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 <div class="card">
                     <div class="image-top" style="background-image: url(assets/img/card-1.jpg)"></div>
                     <div class="card-body">
-                        <h5 class="card-title fw-bold">Asado en la Patagonia</h5>
+                        <h5 class="card-title fw-bold">Web Ministerio de Salud</h5>
                         <p class="card-text">
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                             Explicabo iure sint, perspiciatis distinctio molestias nihil
@@ -132,7 +132,7 @@
                 <div class="card">
                     <div class="image-top" style="background-image: url(assets/img/card-2.jpg)"></div>
                     <div class="card-body">
-                        <h5 class="card-title fw-bold">Papas del fin del mundo</h5>
+                        <h5 class="card-title fw-bold">Campaña Ciclo de cine</h5>
                         <p class="card-text">
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                             Deserunt a culpa doloremque voluptatem dicta nam. Maxime ipsum,
@@ -149,7 +149,7 @@
                 <div class="card">
                     <div class="image-top" style="background-image: url(assets/img/card-3.jpg)"></div>
                     <div class="card-body">
-                        <h5 class="card-title fw-bold">Salmones de Alaska</h5>
+                        <h5 class="card-title fw-bold">Gráficas digitales empresa</h5>
                         <p class="card-text">
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                             Obcaecati facere quibusdam sint id laborum magni velit ducimus
